--- a/index.html
+++ b/index.html
@@ -6,8 +6,27 @@
     <title>We Are Gamers</title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/styles.css">
+    <script src="https://kit.fontawesome.com/8b65a6886c.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="container">
+                <div class="logo">
+                    <h2><img src="images/Frame.png" alt=""> <span class="primary-color">G</span>amer</h2> 
+                </div>
+                <div class="nav-menu">
+                    <ul>
+                        <li><a href="">About Us</a></li>
+                        <li><a href="">Developers</a></li>
+                        <li class="social-link">Follow Us On
+                            <a href=""><i class="fa-brands fa-youtube"></i></a>
+                            <a href=""><i class="fa-brands fa-tiktok"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
