--- a/index.html
+++ b/index.html
@@ -27,6 +27,27 @@
                 </div>
             </div>
         </nav>
+        <section class="header-content">
+            <div class="container">
+                <div class="head-text">
+                    <h2 class="dark-text">Play Like The <br> 
+                        <span class="gradient-text">G.O.A.T.</span>
+                    </h2>
+                    <div class="facilities">
+                        <p><i class="fa-regular fa-circle-play"></i> 1-Click instant play</p>
+                        <p><i class="fa-regular fa-circle-down"></i> No Download</p>
+                        <p><i class="fa-solid fa-user-group"></i> 1000s of supported online games</p>
+                    </div>
+                    <div class="buttons">
+                        <button class="primary-btn">Sign In</button>
+                        <button class="secondary-btn">Go Rogue</button>
+                    </div>
+                </div>
+                <div class="head-banner">
+                    <img src="images/Group18.png" alt="">
+                </div>
+            </div>
+        </section>
     </header>
 </body>
 </html>
