--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>We Are Gamers</title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/responsive.css">
     <script src="https://kit.fontawesome.com/8b65a6886c.js" crossorigin="anonymous"></script>
 </head>
 <body>
