--- a/index.html
+++ b/index.html
@@ -50,5 +50,20 @@
             </div>
         </section>
     </header>
+<!-- We are gamer section -->
+    <section class="gamer">
+        <div class="container">
+            <div class="gamer-img">
+                <img src="images/pngwing4.png" alt="gamer image">
+            </div>
+            <div class="gamer-text">
+               <h2 class="gradient-text">We are gamer</h2>
+                <p>An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+                <button class="primary-btn">Know More</button>
+                <p>Our purpose...<br><span class="quote">“unleash the gamer in everyone”</span></p>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
