created online games section, styled it and make responsive

--- a/index.html
+++ b/index.html
@@ -65,5 +65,36 @@
         </div>
     </section>
 
+<!-- Online Games Section -->
+    <section class="online-games section-space">
+        <div class="container">
+            <div class="section-title">
+                <h2 class="dark-text">Online Games <span class="gradient-text">Funny Videos</span></h2>
+                <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+            </div>
+
+            <div class="game-cards">
+                <div class="card">
+                    <img src="images/Rectangle4.png" alt="Game Card 1">
+                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div class="card">
+                    <img src="images/Rectangle5.png" alt="Game Card 1">
+                    <p>Did you score? #unblockedgames #school</p>
+                </div>
+                <div class="card">
+                    <img src="images/Rectangle7.png" alt="Game Card 1">
+                    <p>Breaking game records like OG</p>
+                </div>
+                <div class="card">
+                    <img src="images/Rectangle6.png" alt="Game Card 1">
+                    <p>Busted gaming on school laptop, but you are still lit.</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+
 </body>
 </html>
