added Gamer Vantage Section to the site styled it and also made it responsive

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </section>
 
 <!-- Online Games Section -->
-    <section class="online-games section-space">
+    <section class="online-games section-spacing">
         <div class="container">
             <div class="section-title">
                 <h2 class="dark-text">Online Games <span class="gradient-text">Funny Videos</span></h2>
@@ -80,7 +80,7 @@
                 </div>
                 <div class="card">
                     <img src="images/Rectangle5.png" alt="Game Card 1">
-                    <p>Did you score? #unblockedgames #school</p>
+                    <p>Did you score? #unblocked_games #school</p>
                 </div>
                 <div class="card">
                     <img src="images/Rectangle7.png" alt="Game Card 1">
@@ -94,6 +94,40 @@
 
         </div>
     </section>
+
+<!-- Gamer vantage Section -->
+    <section class="gamer-vantage section-spacing">
+        <div class="container">
+            <div class="vantage">
+                <div class="vantage-text">
+                    <h2 class="dark-text"><span class="gradient-text">Play Instantly,</span> No Downloads No Installs.</h2>
+                    <p>Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+                </div>
+                <div class="vantage-image">
+                    <img src="images/Rectangle55.png" alt="Online game image">
+                    <div class="over-img">
+                        <img src="images/Rectangle66.png" alt="overlay image">
+                    </div>
+                </div>
+                
+            </div>
+
+
+            <div class="vantage section-spacing">
+                <div class="vantage-text">
+                    <h2 class="dark-text"><span class="gradient-text">Play Games Online</span> Anywhere, Anytime! </h2>
+                    <p>PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online for free, any time, anywhere , on any device.</p>
+                </div>
+                <div class="vantage-image">
+                    <img src="images/Rectangle67.png" alt="Online game image">
+                    <div class="over-img">
+                        <img src="images/Rectangle78.png" alt="overlay image">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
 </body>
