added Careers Section, added styles to it and made it responsive as well

--- a/index.html
+++ b/index.html
@@ -128,6 +128,39 @@
         </div>
     </section>
 
+<!-- Careers Section    -->
+    <section class="careers">
+        <div class="container">
+            <div class="career-text">
+                <div class="title-text">
+                    <h2>Careers</h2>
+                    <p>Gamer is driven to create the best and most fun games for our millions of players all around the world, and we,re always on the lookout for more top talent to join our growing team. If you,d like to help us make great games and be a part of Gamers bright future, we,d love to hear from you.</p>
+                </div>
+                <div class="career-list">
+                    <ul>
+                        <li>Multimedia Artist +</li>
+                        <li>Data Engineer +</li>
+                        <li>Android Engineer +</li>
+                        <li>Server Developer +</li>
+                        <li>Group Financial Accountant +</li>
+                        <li>Senior User Acquisition Specialist +</li>
+                    </ul>
+                    <ul>
+                        <li>Lisbon, Portugal</li>
+                        <li>Lisbon, Portugal</li>
+                        <li>Zoetermeer, Netherlands</li>
+                        <li>Lisbon, Portugal</li>
+                        <li>London, United Kingdom</li>
+                        <li>Lisbon, Portugal</li>
+                    
+                    </ul>
+                </div>
+            </div>
+            <div class="career-image">
+                <img src="images/Group65.png" alt="Kids Playing">
+            </div>
+        </div>
+    </section>
 
 
 </body>
