added Game catagories styled it using flexbox

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <div class="container">
                 <div class="logo">
-                    <h2><img src="images/Frame.png" alt=""> <span class="primary-color">G</span>amer</h2> 
+                    <h2 class="dark-text"><img src="images/Frame.png" alt=""> <span class="primary-color">G</span>amer</h2> 
                 </div>
                 <div class="nav-menu">
                     <ul>
@@ -162,6 +162,22 @@
         </div>
     </section>
 
+<!-- Game catagories -->
+    <section class="catagories">
+        <div class="container">
+            <ul>
+                <li><a href=""><img src="images/Rectangle11.png" alt="catagories icon"> Action Games</a></li>
+                <li><a href=""><img src="images/Rectangle12.png" alt="catagories icon"> Adventure Games</a></li>
+                <li><a href=""><img src="images/Rectangle13.png" alt="catagories icon"> Arcade Games</a></li>
+                <li><a href=""><img src="images/Rectangle14.png" alt="catagories icon"> Educational Games</a></li>
+                <li><a href=""><img src="images/Rectangle15.png" alt="catagories icon"> Word Games</a></li>
+                <li><a href=""><img src="images/Rectangle16.png" alt="catagories icon"> Role Playing Games</a></li>
+                <li><a href=""><img src="images/Rectangle17.png" alt="catagories icon"> Music & Audio Games</a></li>
+                <li><a href=""><img src="images/Rectangle18.png" alt="catagories icon"> Puzzle Games</a></li>
+                <li><a href=""><img src="images/Rectangle19.png" alt="catagories icon"> Strategy Games</a></li>
+            </ul>
+        </div>
+    </section>
 
 </body>
 </html>
