added footer to the page, styled it, made it mobile friendly

--- a/index.html
+++ b/index.html
@@ -178,6 +178,46 @@
             </ul>
         </div>
     </section>
+<!-- footer section -->
+    <footer>
+        <div class="container">
+            <div class="footer-logo logo">
+                <h2 class="light-text"><img src="images/Frame.png" alt=""> <span class="primary-color">G</span>amer</h2> 
+            </div>
+            <div class="footer-nav">
+                <ul>
+                    <li><a href="">Our Story</a></li>
+                    <li><a href="">Games</a></li>
+                    <li><a href="">Web Games</a></li>
+                    <li><a href="">Careers</a></li>
+                    <li><a href="">Support</a></li>
+                    <li><a href="">My Account</a></li>
+                </ul>
+            </div>
+            <div class="footer-social-links">
+                <ul>
+                    <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-youtube"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-linkedin"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-square-snapchat"></i></a></li>
+                </ul>
+            </div>
+            <div class="terms-policies">
+                <ul>
+                    <li><a href="">Terms and Conditions</a></li>
+                    <li><a href="">Privacy Policy</a></li>
+                    <li><a href="">Cookie Policy</a></li>
+                    <li><a href="">Privacy Settings</a></li>
+                </ul>
+            </div>
+            <div class="copyright">
+                <p>Play Games @ Gamer &copy;2000-2023 Gamer Bangladesh</p>
+            </div>
+        </div>
+    </footer>
+
 
 </body>
 </html>
