fixed some issue

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>We Are Gamers</title>
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/responsive.css">
     <script src="https://kit.fontawesome.com/8b65a6886c.js" crossorigin="anonymous"></script>
@@ -152,9 +152,9 @@
                         <li>Lisbon, Portugal</li>
                         <li>London, United Kingdom</li>
                         <li>Lisbon, Portugal</li>
-                    
                     </ul>
                 </div>
+                <button class="secondary-btn light-btn">See all positions</button>
             </div>
             <div class="career-image">
                 <img src="images/Group65.png" alt="Kids Playing">
