added overlap for online game section

--- a/index.html
+++ b/index.html
@@ -75,19 +75,44 @@
 
             <div class="game-cards">
                 <div class="card">
-                    <img src="images/Rectangle4.png" alt="Game Card 1">
+                    <div class="card-img">
+                        <img src="images/Rectangle4.png" alt="Game Card 1">
+                        <div class="card-overlay">
+                            <p><i class="fa-regular fa-circle-play"></i></p>
+                            <p>Watch Now</p>
+                        </div>
+                    </div>
                     <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                    
                 </div>
                 <div class="card">
-                    <img src="images/Rectangle5.png" alt="Game Card 1">
+                    <div class="card-img">
+                        <img src="images/Rectangle5.png" alt="Game Card 1">
+                        <div class="card-overlay">
+                            <p><i class="fa-regular fa-circle-play"></i></p>
+                            <p>Watch Now</p>
+                        </div>
+                    </div>
                     <p>Did you score? #unblocked_games #school</p>
                 </div>
                 <div class="card">
-                    <img src="images/Rectangle7.png" alt="Game Card 1">
+                    <div class="card-img">
+                        <img src="images/Rectangle7.png" alt="Game Card 1">
+                        <div class="card-overlay">
+                            <p><i class="fa-regular fa-circle-play"></i></p>
+                            <p>Watch Now</p>
+                        </div>
+                    </div>
                     <p>Breaking game records like OG</p>
                 </div>
                 <div class="card">
-                    <img src="images/Rectangle6.png" alt="Game Card 1">
+                    <div class="card-img">
+                        <img src="images/Rectangle6.png" alt="Game Card 1">
+                        <div class="card-overlay">
+                            <p><i class="fa-regular fa-circle-play"></i></p>
+                            <p>Watch Now</p>
+                        </div>
+                    </div>
                     <p>Busted gaming on school laptop, but you are still lit.</p>
                 </div>
             </div>
